# blog

./: Cargo.toml  TODO.md
migrations/2024-01-02-115908_create_posts/: up.sql
migrations/2024-01-03-075912_create_user/: up.sql
migrations/2024-01-03-081153_add_user_id_to_posts/: down.sql  up.sql
migrations/2024-01-03-113331_update_users_table/: down.sql  up.sql
migrations/2024-01-03-113903_username_unique/: up.sql
migrations/2024-01-04-155920_add_comments/: up.sql
src/: db.rs  jwt.rs  main.rs  models.rs  routes.rs  schema.rs
