[package]
name = "blog"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
diesel = { version = "2.1.0", features = ["postgres", "uuid", "r2d2"] }
dotenvy = "0.15"
serde = { version = "*", features = ["derive"] }
serde_json = "*"
uuid = { version = "1.6.1", features = ["serde", "v4"] }
bcrypt = "*"
